# SPM-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.sh
src/: ConcurrentDeque.cpp  Utimer.cpp  VideoMotionDetection.cpp  farm.cpp  ff_nodes_implementations.cpp  pipe.cpp  sequential.cpp
